apps/base/headlamp/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  namespace: headlamp
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Cluster
    gethomepage.dev/name: Headlamp
    gethomepage.dev/description: Kubernetes cluster dashboard
spec:
  ingressClassName: traefik-internal
  tls:
    - hosts: [headlamp.int.harville.dev]
  rules:
    - host: headlamp.int.harville.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 80
